centosbrandingdir = $(datadir)/cockpit/branding/centos

centosbranding_DATA = \
	src/branding/centos/45-brand-dark.png \
	src/branding/centos/45-brand-light.png \
	src/branding/centos/branding.css \
	src/branding/centos/dark-background.jpg \
	src/branding/centos/favicon.ico \
	src/branding/centos/light-background.jpg \
	$(NULL)

EXTRA_DIST += $(centosbranding_DATA)
