ubuntubrandingdir = $(datadir)/cockpit/branding/ubuntu

ubuntubranding_DATA = \
	src/branding/ubuntu/branding.css \
	src/branding/ubuntu/favicon.ico \
	src/branding/ubuntu/45drives-ubuntu-dark.svg \
	src/branding/ubuntu/45drives-ubuntu-light.svg \
	src/branding/ubuntu/houston-background-dark.svg \
	src/branding/ubuntu/houston-background-light.svg \
	$(NULL)

EXTRA_DIST += $(ubuntubranding_DATA)

